css/main.css
* { /* Quick Reset */
  margin: 0;
  padding: 0;
  outline: none;
  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  font-weight: 300;
  font-size: 12px;
  line-height: 14px;
  letter-spacing: 0.01em;
  box-sizing: border-box;
  position: relative;
}/*
*::-webkit-scrollbar {
    display: none;
}*/
/* General Layout ------------------------------------ */
html,
body {
  width: 100%;
  height: 100%;
  background-color: #F7F7F7;
}
body {
  padding: 0 20px;
  overflow: auto;
  overflow-x: hidden;
  background: #F7F7F7 url('../images/bg.png') center top repeat-x;
  min-height: 100%;
}
.container {
  width: 100%;
  margin: auto;
  max-width: 960px;
}
h1, h2, h3, h4, h5, h6,
label, p, aside, article, span {
  color: #404040;
  text-shadow: 1px 1px 1px #DDD;
}
p { line-height: 20px; }
a > span, p > span, h2 > span, h3 > span {
  color: inherit; text-decoration: inherit;
  text-shadow: inherit; font-size: inherit;
  line-height: inherit;white-space:inherit;
  font-weight: inherit;
}
/* Utility Classes --------------------------------- */
.v-align {
  display: inline-block;
  top: 50%;
  transform: translateY(-50%);
}
/* App Page Styles ----------------------------------- */
#app {
  padding-bottom: 50px;
}
#header {
  height: 120px;
  background: #404040 url('../images/bg.png');
  margin-bottom: 30px;
  overflow: visible;
}
.nav-links {
  display: inline-block;
  list-style: none;
}
.nav-link {
  display: inline-block;
  height: 100%;
}
.nav-link-a {
  display: block;
  width: 100%;
  height: 100%;
}
#nav-top {
  float: right;
  height: 28px;
  margin-top: 5px;
}
#nav-top-links,
.nav-top-link {
  height: 28px;
}
.nav-top-link-a {
  color: #F7F7F7;
  text-shadow: 1px 1px 1px #333;
  height: 14px;
  border-right: 1px solid #F7F7F7;
  margin: 7px 0;
  padding: 0 10px;
  text-decoration: none;
  white-space: nowrap;
}
.nav-top-link:last-child .nav-link-a {
  border: none;
}
.nav-top-link:hover .nav-top-link-a {
  text-decoration: underline;
}
#top-search {
  display: inline-block;
  width: 140px;
  margin: 0 10px;
}
#search {
  width: 100%;
  height: 24px;
  padding: 6px;
}
#submit {
  width: 27px;
  height: 30px;
  position: absolute;
  top: 0;
  bottom: 0;
  left: auto;
  right: 0;
  margin: auto;
  border: none;
  background: transparent url('../images/sprite.png') -33px -30px no-repeat;
  text-indent: -10000px;
  cursor: pointer;
}
#logo {
  height: 120px;
  width: 320px;
  max-width: 100%;
  margin: 0 10px;
}
#logo-img {
  position: absolute;
  top: auto;
  right: auto;
  margin: auto;
  left: 0;
  bottom: 30px;
  max-width: 100%;
}
#logo-hil {
  position: absolute;
  top: -50%;
  left: 0;
  right: 0;
  bottom: 50%;
  background: -moz-radial-gradient(center, ellipse cover,  rgba(255,255,255,0.1) 0%, rgba(255,255,255,0) 75%, rgba(255,255,255,0) 100%);
  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(255,255,255,0.1)), color-stop(75%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,0)));
  background: -webkit-radial-gradient(center, ellipse cover,  rgba(255,255,255,0.1) 0%,rgba(255,255,255,0) 75%,rgba(255,255,255,0) 100%);
  background: -o-radial-gradient(center, ellipse cover,  rgba(255,255,255,0.1) 0%,rgba(255,255,255,0) 75%,rgba(255,255,255,0) 100%);
  background: -ms-radial-gradient(center, ellipse cover,  rgba(255,255,255,0.1) 0%,rgba(255,255,255,0) 75%,rgba(255,255,255,0) 100%);
  background: radial-gradient(ellipse at center,  rgba(255,255,255,0.1) 0%,rgba(255,255,255,0) 75%,rgba(255,255,255,0) 100%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1affffff', endColorstr='#00ffffff',GradientType=1 );
}
#nav-main {
  width: 100%;
  height: 30px;
}
#nav-main-links {
  height: 30px;
  margin: 0 5px;
}
.nav-main-link {
  margin: 0 5px;
}
.nav-main-link-a {
  font-size: 18px;
  line-height: 18px;
  padding: 0 10px;
  color: #1DA7DD;
  border-radius: 0 0 3px 3px;
  background: none;
  background-position: center -120px;
  text-decoration: none;
  font-weight: 700;
  transition: all 0.2s ease-in, background-position 0.2s linear;
}
.nav-link:hover .nav-main-link-a,
.nav-links:not(:hover) .nav-link.active .nav-main-link-a {
  background: #404040 url('../images/bg.png') center -90px repeat-x;
  color: #FFF;
  text-shadow: 1px 1px 1px #333;
  box-shadow: 0px 2px 2px 0 #404040;
}
main#content {
  padding-top: 40px;
}
main#content:before,
main#content:after {
  content: " ";
  display: table;
} main#content:after {
  clear: both;
}
.col-left,
.col-right {
  margin: 10px;
  float: left;
}
.col-left {
  width: 66.67%;
  max-width: 620px;
}
.col-right {
  width: 33.33%;
  max-width: 300px;
}
.article-title {
  font-size: 32px;
  line-height: 40px;
  font-weight: 500;
  height: 48px;
  padding: 4px 0;
}
.article-subtitle {
  color: #1DA7DD;
  font-weight: 700;
}
.article-paragraphs {
  margin: 25px 0 35px;
}
.article-paragraph {
  color: #000;
}
.accordian {
  box-shadow: 0 0 5px 0 #DDD;
}
.accordian-title {
  width: 100%;
  height: 30px;
  background: #404040;
  display: inline-block;
}
.accordian-title-text {
  display: inline-block;
  height: 30px;
  font-size: 12px;
  line-height: 30px;
  padding: 0 10px;
  color: #E0E0E0;
  text-shadow: -1px -1px 1px #666;
  font-weight: 500;
  box-shadow: inset 0px -2px 2px 0 #888;
  width: 100%;
  margin-right: -30px;
}
.accordian-title-toggle {
  width: 30px;
  height: 30px;
  border: none;
  background: #F7F7F7 url('../images/sprite.png') 0px 0px no-repeat;
  float: right;
  transition: background-position 0.5s linear;
}
.accordian-title.active {
  background: #292929;
}
.accordian-title.active .accordian-title-text {
  color: #FFF;
}
.accordian-title.active .accordian-title-toggle {
  background-position: -30px 0px;
}
.accordian-detail {
  background: #FFF;
  height: 0px;
  overflow: hidden;
  transition: height 0.5s;
}
.accordian-detail.active {
  border: 1px solid #DDD;
  height: 240px;
}
.accordian-detail .accordian-paragraph {
  width: 100%;
  height: 100%;
  overflow: hidden;
  padding: 30px 20px;]
}
/* This would be enabled if the content might be taller than 240px
   but is removed for a smoother effect.
.accordian-detail.active .accordian-paragraph {
  overflow: auto;
}*/
.accordian-detail .accordian-img {
  float: right;
  margin: 0 20px;
}
.accordian-detail .accordian-img.left {
  float: left;
  margin: 0 20px;
}
.col-right {
  background: #9D9D9D;
  box-shadow: 0 -2px 2px 0 #333;
  padding: 0 20px;
}
.aside-article {
  padding: 20px 0;
  border-bottom: 2px inset #777;
  border-top: 1px solid #CCC;
  background: -moz-radial-gradient(center, ellipse cover,  rgba(255,255,255,0.1) 0%, rgba(255,255,255,0) 75%, rgba(255,255,255,0) 100%);
  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(255,255,255,0.1)), color-stop(75%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,0)));
  background: -webkit-radial-gradient(center, ellipse cover,  rgba(255,255,255,0.1) 0%,rgba(255,255,255,0) 75%,rgba(255,255,255,0) 100%);
  background: -o-radial-gradient(center, ellipse cover,  rgba(255,255,255,0.1) 0%,rgba(255,255,255,0) 75%,rgba(255,255,255,0) 100%);
  background: -ms-radial-gradient(center, ellipse cover,  rgba(255,255,255,0.1) 0%,rgba(255,255,255,0) 75%,rgba(255,255,255,0) 100%);
  background: radial-gradient(ellipse at center,  rgba(255,255,255,0.1) 0%,rgba(255,255,255,0) 75%,rgba(255,255,255,0) 100%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1affffff', endColorstr='#00ffffff',GradientType=1 );
}
.aside-article:first-child { border-top: none; }
.aside-article:last-child { border-bottom: none; }
.aside-title {
font-size: 20px;
line-height: 20px;
font-weight: 700;
margin-bottom: 20px;
}
.aside-article.new .article-new {
    position: absolute;
    width: 33px;
    height: 30px;
    margin: auto;
    left: auto;
    top: 0;
    bottom: 0;
    right: 0;
    background: transparent url('../images/sprite.png') 0 -30px no-repeat;
}
.aside-paragraph {
  color: #FFF;
  text-shadow: 1px 1px 1px #666;
}
footer#footer {
  position: absolute;
  width: 100%;
  left: 0;
  right: 0;
  margin: auto;
  background: #E0E0E0;
  box-shadow: inset 0 2px 2px 0 #888;
}
footer#footer .container {
  padding: 20px 10px 40px;
  overflow: auto;
}
#nav-bottom {
  float: right;
  height: 20px;
}
#nav-bottom-links {
  height: 20px;
}
.nav-bottom-link {
  height: 20px;
}
.nav-bottom-link-a {
  display: block;
  height: 14px;
  margin: 3px 0;
  padding: 0 10px;
  border-right: 1px solid #404040;
  color: #404040;
  text-decoration: none;
}
.nav-bottom-link:last-child .nav-bottom-link-a {
  border-right: none;
  padding-right: 0;
}
.nav-bottom-link:hover .nav-bottom-link-a {
  text-decoration: underline;
}
#copyright {
  height: 20px;
  padding: 3px 0;
  margin: 3px 0;
  display: inline-block;
}

/* Media Queries ------------------------------------- */
@media only screen and (min-width : 320px) and (max-width : 480px) {
  body { padding: 0; }
  .container { max-width: 300px; }
  #nav-top-links { display: none; }
  #logo { margin: auto; }
  #logo-img { bottom: 20px; }
  .nav-main-link { margin: 0; }
  .nav-main-link.active {
    position: absolute;
    top: -100%;
    margin-top: -90px;
  }
  .nav-main-link-a { margin: 0; padding: 0 5px; }
  main#content { padding-top: 0px; }
  #nav-bottom {
    float: none;
    text-align: center;
    height: auto;
    margin-bottom: 10px;
  }
}
@media only screen and (min-width: 320px) and (max-width : 768px) {
  .col-left,
  .col-right {
    width: 100%;
    max-width: 100%; 
    margin: 10px 0;
  }
}
@media only screen and (min-width : 768px) and (max-width : 1024px) {
  .container { max-width: 700px; }
  .col-left  { max-width: 447px; }
  .col-right { max-width: 213px; }
}
@media only screen  and (min-width : 1024px) {
  .container { max-width: 960px; }
}

